kubernetes/clusters/home-argo/base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.internal.paulfriedrich.me`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.internal.paulfriedrich.me`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.internal.paulfriedrich.me`)
      middlewares:
        - name: http-to-https
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
